; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-mpath.c_pg_init_all_paths.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-mpath.c_pg_init_all_paths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.multipath = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.multipath*)* @pg_init_all_paths to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pg_init_all_paths(%struct.multipath* %0) #0 {
  %2 = alloca %struct.multipath*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.multipath* %0, %struct.multipath** %2, align 8
  %5 = load %struct.multipath*, %struct.multipath** %2, align 8
  %6 = getelementptr inbounds %struct.multipath, %struct.multipath* %5, i32 0, i32 0
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.multipath*, %struct.multipath** %2, align 8
  %10 = call i32 @__pg_init_all_paths(%struct.multipath* %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.multipath*, %struct.multipath** %2, align 8
  %12 = getelementptr inbounds %struct.multipath, %struct.multipath* %11, i32 0, i32 0
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* %12, i64 %13)
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__pg_init_all_paths(%struct.multipath*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
